--- a/src/css/todo_layout.css
+++ b/src/css/todo_layout.css
@@ -86,3 +86,14 @@ input[type=password]:not(.browser-default):focus:not([readonly]) + label{
   left: 70%;
   top: 5%;
 }
+.submit_button_in_modal{
+  position: absolute;
+  left:5%;
+  top:75%;
+}
+
+.modal_delete_list{
+  position: absolute ;
+  left: 78%;
+  top: 10%;
+}
