--- a/src/css/todo_layout.css
+++ b/src/css/todo_layout.css
@@ -83,7 +83,7 @@ input[type=password]:not(.browser-default):focus:not([readonly]) + label{
 
 .toolbar{
   position: absolute;
-  left: 70%;
+  left: 63%;
   top: 5%;
 }
 .submit_button_in_modal{
@@ -97,5 +97,11 @@ input[type=password]:not(.browser-default):focus:not([readonly]) + label{
   left: 78%;
   top: 10%; */
   position: relative;
-left: 90%;
+  left: 91%;
+top: 0%;
+}
+.button_add_item{
+  position:relative;
+  left: 72%;
+  top: 9%;
 }
