--- a/src/css/wireframers_layout.css
+++ b/src/css/wireframers_layout.css
@@ -103,7 +103,7 @@ input[type=password]:not(.browser-default):focus:not([readonly]) + label{
   display: inline-block;
 }
 #white_board{
-  background-color: white;
+  background-color: black;
   /* width: 500px;
   height: 400px; */
 }
