--- a/src/css/wireframers_style.css
+++ b/src/css/wireframers_style.css
@@ -4,8 +4,8 @@
       COLORS THAT WE'LL USE TOGETHER IN MULTIPLE PLACES THAT
       TOGETHER WILL MAKE UP A GIVEN THEME
   */
-  --swatch-foundation:    #EEEEDD; /* USED FOR BODY BACKGROUND */
-  --swatch-primary:       #E6E6E6; /* DOMINANT COLOR, USED FOR MOST BACKGROUNDS */
+  --swatch-foundation:    #e7e4e4; /* USED FOR BODY BACKGROUND */
+  --swatch-primary:         #111111; /* DOMINANT COLOR, USED FOR MOST BACKGROUNDS */
   --swatch-complement:    #E1E4CB; /* USED IN FORGROUND OF PRIMARY FOR TEXT AND BORDERS */
   --swatch_contrast:      #111111; /* USED IN MOUSE-OVER SELECTION OF LARGE ELEMENTS */
   --swatch-accent:        #669966; /* USED IN MOUSE-OVER SELECTION OF TEXT AND BORDERS */    
@@ -22,7 +22,7 @@ div.banner {
   /* background-image: linear-gradient(to bottom,         
   #b8b808, #636723); */
   background-image: linear-gradient(to bottom,         
-  #87CEFA,  	 	#E6E6FA);
+  rgb(57, 66, 71),  	 	#E6E6FA);
 
   color: white;
   font-size: 35pt;
@@ -36,5 +36,5 @@ div.banner {
 }
 
 .container{
-  background-color:rgb(216, 214, 214)
+  background-color:rgb(197, 196, 196)
 }
